Prepare app for production deploy (Vercel + Railway)
- Backend: read datasource, JWT secret, server port, and CORS allowed
  origins from environment variables (with local defaults preserved via
  application-local.yaml), so the same jar runs against Railway's env
  without code changes
- Frontend: API base URL now configurable via VITE_API_BASE_URL, falling
  back to localhost for local dev

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>